fix: visibility

--- a/css/style.css
+++ b/css/style.css
@@ -23760,7 +23760,7 @@ ul.main-menu li.menu-item a {
 }
 
 
-@media (max-width: 991px) {
+/* @media (max-width: 991px) {
   ul.main-menu li.menu-item a {
     padding: 12px 0;
     width: 100%;
@@ -23800,7 +23800,7 @@ ul.main-menu li.menu-item a {
     color: #fff;
     background-color: #222;
   }
-}
+} */
 
 /* Navbar more css - ended */
 
